--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@jinming6/ming-tool",
   "version": "1.2.1",
   "description": "",
-  "main": "dist/ming-tool.js",
+  "main": "dist/ming-tool.min.js",
   "scripts": {
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
     "coverage": "node --experimental-vm-modules node_modules/jest/bin/jest.js --coverage",
