--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "rollup --config rollup.config.ts --configPlugin typescript",
     "dev": "rollup --watch --config rollup.config.ts --configPlugin typescript",
     "prepare": "husky",
-    "release": "semantic-release"
+    "release": "semantic-release",
+    "size": "size-limit && gzip-size dist/index.js"
   },
   "keywords": [],
   "author": "Jinming6 <response965@163.com>",
@@ -22,6 +23,7 @@
     "@rollup/plugin-typescript": "^11.1.5",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
+    "@size-limit/preset-big-lib": "^11.1.4",
     "@types/jest": "^29.5.11",
     "@types/lodash-es": "^4.17.12",
     "@types/uuid": "^9.0.8",
@@ -34,6 +36,7 @@
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-n": "^15.0.0 || ^16.0.0 ",
     "eslint-plugin-promise": "^6.0.0",
+    "gzip-size-cli": "^5.1.0",
     "husky": "^9.0.11",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
@@ -41,6 +44,7 @@
     "prettier": "3.1.1",
     "rollup": "^4.8.0",
     "semantic-release": "^23.0.0",
+    "size-limit": "^11.1.4",
     "ts-jest": "^29.1.1",
     "tslib": "^2.6.2",
     "typescript": "^5.3.3"
@@ -89,5 +93,11 @@
   "volta": {
     "node": "18.20.2",
     "pnpm": "9.0.4"
-  }
+  },
+  "size-limit": [
+    {
+      "limit": "2.99 KB",
+      "path": "dist/index.js"
+    }
+  ]
 }
