--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "1.2.3",
   "description": "前端工具库",
   "main": "dist/ming-tool.min.js",
+  "types": "dist/types/src/main.d.ts",
   "scripts": {
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
     "coverage": "node --experimental-vm-modules node_modules/jest/bin/jest.js --coverage",
-    "build": "rollup --config rollup.config.ts --configPlugin typescript && pnpm run size",
+    "build": "rimraf dist && rollup --config rollup.config.ts --configPlugin typescript && pnpm run size",
     "dev": "rollup --watch --config rollup.config.ts --configPlugin typescript",
     "prepare": "husky",
     "release": "semantic-release",
@@ -46,6 +47,7 @@
     "jest-environment-jsdom": "^29.7.0",
     "lint-staged": "^15.2.0",
     "prettier": "3.1.1",
+    "rimraf": "5",
     "rollup": "^4.8.0",
     "semantic-release": "^23.0.0",
     "size-limit": "^11.1.4",
