--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "outDir": "./dist/types",
     "target": "es2016",
     "module": "ESNext",
     "moduleResolution": "Node",
@@ -7,6 +8,10 @@
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
-    "skipLibCheck": true
-  }
+    "skipLibCheck": true,
+    "declaration": true,
+    "emitDeclarationOnly": true
+  },
+  "include": ["src", "rollup.config.ts"],
+  "exclude": ["node_modules", "**/test/*"]
 }
